@@ -771,21 +771,8 @@ static void CartManagement(void)
 						break;
 					default:
 						/* r > 0 */
-						CARTRIDGE_main.type = UI_SelectCartType(r);
+						CARTRIDGE_SetType(&CARTRIDGE_main, UI_SelectCartType(r));
 						break;
-					}
-					if (CARTRIDGE_main.type != CARTRIDGE_NONE) {
-						int for5200 = CARTRIDGE_IsFor5200(CARTRIDGE_main.type);
-						if (for5200 && Atari800_machine_type != Atari800_MACHINE_5200) {
-							Atari800_machine_type = Atari800_MACHINE_5200;
-							MEMORY_ram_size = 16;
-							Atari800_InitialiseMachine();
-						}
-						else if (!for5200 && Atari800_machine_type == Atari800_MACHINE_5200) {
-							Atari800_machine_type = Atari800_MACHINE_XLXE;
-							MEMORY_ram_size = 64;
-							Atari800_InitialiseMachine();
-						}
 					}
 					Atari800_Coldstart();
 				}
@@ -816,8 +803,7 @@ static void CartManagement(void)
 						break;
 					default:
 						/* r > 0 */
-						CARTRIDGE_piggyback.type = UI_SelectCartType(r);
-						CARTRIDGE_Start(&CARTRIDGE_piggyback);
+						CARTRIDGE_SetType(&CARTRIDGE_piggyback, UI_SelectCartType(r));
 						break;
 					}
 				}
